--- a/HW2/Debug/makefile
+++ b/HW2/Debug/makefile
@@ -42,14 +42,14 @@ all: HW2.exe
 # Tool invocations
 HW2.exe: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
-	@echo 'Invoking: Cygwin C++ Linker'
+	@echo 'Invoking: GCC C++ Linker'
 	g++  -o "HW2.exe" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(CC_DEPS)$(C++_DEPS)$(EXECUTABLES)$(OBJS)$(C_UPPER_DEPS)$(CXX_DEPS)$(CPP_DEPS)$(C_DEPS) HW2.exe
+	-$(RM) $(CC_DEPS)$(C++_DEPS)$(EXECUTABLES)$(C_UPPER_DEPS)$(CXX_DEPS)$(OBJS)$(CPP_DEPS)$(C_DEPS) HW2.exe
 	-@echo ' '
 
 .PHONY: all clean dependents
