--- a/HW2/CMakeLists.txt
+++ b/HW2/CMakeLists.txt
@@ -5,6 +5,9 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_FLAGS "-ggdb -Wall -pedantic-errors")
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-add_executable(main Main.cpp Delivery.cpp Date.cpp Edge.cpp Port.cpp)
+add_executable(main Main.cpp Delivery.cpp Date.cpp Edge.cpp EdgeCargo.cpp EdgeTime.cpp Port.cpp Clerk.cpp BoogieLever.cpp )
 
