linker errors file

--- a/HW3/CMakeLists.txt
+++ b/HW3/CMakeLists.txt
@@ -9,5 +9,5 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-add_executable(boggieLever Main.cpp Delivery.cpp Date.cpp Edge.cpp EdgeCargo.cpp EdgeTime.cpp Port.cpp Clerk.cpp BoogieLever.cpp )
+add_executable(ship_sim  )
 
