--- a/fast_networks/hw1/Project1/Project1/Project1.vcxproj
+++ b/fast_networks/hw1/Project1/Project1/Project1.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{5B1FA333-0824-40A3-95BC-102E2C9349A9}</ProjectGuid>
     <RootNamespace>Project1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <ProjectName>hw1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -111,11 +112,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\hw1\dn_protocol.cpp" />
+    <ClCompile Include="..\..\hw1\ip_file_handler.cpp" />
     <ClCompile Include="..\..\hw1\main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\hw1\dn_protocol.h" />
+    <ClInclude Include="..\..\hw1\ip_file_handler.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
