--- a/y3/sem_b/quiz_hw2/app/src/main/AndroidManifest.xml
+++ b/y3/sem_b/quiz_hw2/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Question_main"></activity>
+        <activity android:name=".QuestionMain"></activity>
     </application>
 
 </manifest>
