Android - working on kotelmania hw

--- a/y3/sem_b/android/kotelmania/app/src/main/AndroidManifest.xml
+++ b/y3/sem_b/android/kotelmania/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:windowSoftInputMode="adjustResize"
+            android:name=".EditNote"
+            android:label="@string/title_activity_edit_note"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
