Android - progreessed, Computer-vision - fixed

--- a/y3/sem_b/android/kotelmania/app/src/main/AndroidManifest.xml
+++ b/y3/sem_b/android/kotelmania/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize"
             android:name=".EditNote"
             android:label="@string/title_activity_edit_note"
